add all except tests

--- a/federation/oidc.codefresh.io/config.yaml
+++ b/federation/oidc.codefresh.io/config.yaml
@@ -15,4 +15,4 @@
 url: https://oidc.codefresh.io
 contact: support@codefresh.io
 description: "Codefresh OIDC tokens for job identity"
-type: "codefresh-pipeline"
+type: "codefresh-workflow"
